--- a/index.html
+++ b/index.html
@@ -142,11 +142,14 @@
                         <h1 class="home__title">Hi, I'm Harshit</h1>
                         <h3 class="home__subtitle">Frontend developer</h3>
                         <p class="home__description">
-                            I have completed my Diploma in Information Technology from Sir Bhavsinhji Polytechnic
-                            Institute in Bhavnagar. Additionally, I have expanded my knowledge by completing HTML, CSS,
-                            and JavaScript courses on Udemy. I have also obtained relevant certifications, which can be
-                            found in the Certification section of my resume. I have created multiple websites using
-                            HTML, CSS, and JavaScript, some of which are included in my GitHub account.
+                            I am pursuing a Bachelor of Engineering (BE) in <strong> Information Technology</strong> at SAL College of
+                            Engineering, where I am in my <b>Third year.</b> Earlier, I completed a Diploma in Information
+                            Technology from Sir Bhavsinghji Polytechnic Institute in Bhavnagar. I have advanced my
+                            skills by completing <b>HTML, CSS, and JavaScript</b>  courses through <b>Udemy</b> and have earned the
+                            appropriate certifications listed in my resume's certification section. I have practical
+                            experience with many websites using HTML, CSS, and JavaScript, some of which appear on my
+                            <b>GitHub </b> account. Additionally, I learned <b>React.js</b> , which further strengthened my front-end
+                            development skills.
                         </p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
@@ -178,7 +181,7 @@
                         and deliver quality work.
                         With over 1 year of experience, I have completed 8+ projects and worked for 2+ companies. My
                         technical skills include proficiency in HTML5, CSS3, and JavaScript. I am also familiar with
-                        Bootstrap, and jQuery, and have knowledge of AJAX, responsive design, cross-browser
+                        React.js, Bootstrap, and jQuery, and have knowledge of AJAX, responsive design, cross-browser
                         compatibility.
                     </p>
                     <div class="about__info">
@@ -191,13 +194,13 @@
                             <span class="about__info-name">Completed <br> project</span>
                         </div>
                         <div>
-                            <span class="about__info-title">02+</span>
+                            <span class="about__info-title">01+</span>
                             <span class="about__info-name">Companies <br> worked</span>
                         </div>
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/files/Harshit_Bhalani_Resume1.pdf" class="button button--flex">
+                        <a download="" href="assets/files/Harshit_Bhalani-Resume.pdf" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -253,6 +256,16 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__js"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills_name">React.js</h3>
+                                    <span class="skills__number">15%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__rjs"></span>
                                 </div>
                             </div>
 
@@ -326,7 +339,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills_name">MYSQL</h3>
-                                    <span class="skills__number">55%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__mysql"></span>
@@ -441,9 +454,9 @@
                         <!-- 3 -->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Currntly Working On Freelancing Projects</h3>
-                                <!-- <span class="qualification__subtitle">Peru - Institute</span>
-                                <div class="qualification__calendar">
+                                <h3 class="qualification__title">Bachelor of Engineering in Infromation Technology</h3>
+                                <span class="qualification__subtitle">Present</span>
+                                <!-- <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i> 2017 - 2019
                                 </div> -->
                             </div>
