--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/files/Harshit_Bhalani-Resume.pdf" class="button button--flex">
+                        <a download="" href="assets/files/Harshit-Bhalani.pdf" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -286,6 +286,36 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__jQuery"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills_name">MongoDB</h3>
+                                    <span class="skills__number">15%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__mongo"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills_name">Express.JS</h3>
+                                    <span class="skills__number">15%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__express"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills_name">Node.JS</h3>
+                                    <span class="skills__number">15%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__node"></span>
                                 </div>
                             </div>
 
