--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/files/Harshit-Bhalani.pdf" class="button button--flex">
+                        <a download="" href="assets/files/Harshit-Bhalani-2 (3).pdf" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
