--- a/index.html
+++ b/index.html
@@ -673,11 +673,13 @@
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Frontend with React.js - I create fast, interactive, and mobile-friendly user interfaces.</p>
+                                    <p>Frontend with React.js - I create fast, interactive, and mobile-friendly user
+                                        interfaces.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Backend with Node.js & Express.js - I build secure and scalable server-side applications.</p>
+                                    <p>Backend with Node.js & Express.js - I build secure and scalable server-side
+                                        applications.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
@@ -686,12 +688,14 @@
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Real-Time Functionality - I integrate features like live chat, notifications, and real-time updates.</p>
+                                    <p>Real-Time Functionality - I integrate features like live chat, notifications, and
+                                        real-time updates.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Performance & Security Optimization - I ensure fast-loading, secure, and scalable applications.</p>
+                                    <p>Performance & Security Optimization - I ensure fast-loading, secure, and scalable
+                                        applications.</p>
                                 </li>
 
                             </ul>
@@ -703,7 +707,8 @@
 
                 <div class="services__content">
                     <div>
-                        <i class="uil uil-web-grid services__icon"></i>
+                        <!-- <i class="uil uil-web-grid services__icon"></i> -->
+                        <i class="uil uil-window-maximize services__icon"></i>
                         <h3 class="services__title">Custom Web Applications</h3>
                     </div>
                     <span class="button button--flex button--small button--link services__button">
@@ -719,11 +724,13 @@
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Business-Centric Development - I create web apps suited for your business model.</p>
+                                    <p>Business-Centric Development - I create web apps suited for your business model.
+                                    </p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>E-commerce & SaaS Solutions - I build platforms for online stores, service providers, and more.</p>
+                                    <p>E-commerce & SaaS Solutions - I build platforms for online stores, service
+                                        providers, and more.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
@@ -735,7 +742,8 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Cross-Platform Compatibility - Works seamlessly on desktops, tablets, and mobile devices..</p>
+                                    <p>Cross-Platform Compatibility - Works seamlessly on desktops, tablets, and mobile
+                                        devices..</p>
                                 </li>
                             </ul>
                         </div>
@@ -744,7 +752,8 @@
                 <!--==================== SERVICES 3 ====================-->
                 <div class="services__content">
                     <div>
-                        <i class="uil uil-pen services__icon"></i>
+                        <!-- <i class="uil uil-window-maximize skills__icon"></i> -->
+                        <i class="uil uil-code-branch services__icon"></i>
                         <h3 class="services__title">API Development <br> & Integration</h3>
                     </div>
                     <span class="button button--flex button--small button--link services__button">
@@ -764,11 +773,12 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Third-Party Integration - Payment gateways, authentication (OAuth, JWT), and cloud services.</p>
+                                    <p>Third-Party Integration - Payment gateways, authentication (OAuth, JWT), and
+                                        cloud services.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p> Efficient Data Handling  Smooth data transfer between frontend and backend.</p>
+                                    <p> Efficient Data Handling Smooth data transfer between frontend and backend.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
@@ -776,9 +786,10 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Secure Authentication & Authorization - Ensuring user data privacy and protection.</p>
+                                    <p>Secure Authentication & Authorization - Ensuring user data privacy and
+                                        protection.</p>
                                 </li>
-                                
+
                             </ul>
                         </div>
                     </div>
@@ -800,12 +811,20 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Digital Marketing Website</h3>
                             <p class="portfolio__description">
-                                I have created a digital marketing services website for a company that provides Website
-                                Design, Search Engine Optimization (SEO), and Social Media Marketing Services.The
-                                website is fast, easy to use, and has clear calls to action. I have used my extensive
-                                knowledge of web technologies and UI/UX design to deliver quality work. The website
-                                showcases my proficiency in HTML5, CSS3, and JavaScript, as well as my experience with
-                                frameworks like Bootstrap and jQuery.
+                                <b>Description</b> : A modern digital services website designed to showcase expertise in
+                                web development, SEO, and digital marketing. <br>
+
+                                <b>Features</b>: <br>
+                                ✅ Fully responsive and mobile-friendly design <br>
+                                ✅ Interactive UI with smooth animations<br>
+                                ✅ Service sections to highlight offerings<br>
+                                ✅ JavaScript-based chatbot integration for user support<br>
+                                ✅ Contact form for inquiries<br>
+                                ✅ Fast-loading and SEO-optimized structure<br>
+
+                                <b>Technologies Used</b> : <br>
+                                <b>Frontend</b> : HTML, CSS, JavaScript <br>
+                                <b>Chatbot Integration</b> : JavaScript <br>
                             </p>
                             <a href="https://bhdigitalsolutions.netlify.app/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
@@ -822,17 +841,29 @@
                         <img src="assets/img/HIDDENVIBES.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Hidden Vibes Website</h3>
+                            <h3 class="portfolio__title">sepal Website</h3>
                             <p class="portfolio__description">
-                                I am proud to showcase my latest project, "Hidden Vibes," a dynamic e-commerce platform
-                                that specializes in providing top-notch bike shields through a seamless online shopping
-                                experience. Integrated with the innovative Sepal Shield brand, this website serves as a
-                                hub for bike enthusiasts seeking premium protective solutions. With a meticulously
-                                crafted website architecture, I have developed multiple pages that offer comprehensive
-                                information about the products, seamless integration with WhatsApp and various social
-                                media platforms,
+                                <b> Description:</b>
+                                SEPAL is a collapsible canopy that can be quickly attached to any motorcycle, providing
+                                riders with protection from sun, rain, dust, and pollution. <br>
+
+                                <b>Features</b>: <br>
+                                ✅ Responsive Design<br>
+                                ✅ Product Showcase<br>
+                                ✅ E-Commerce Integration<br>
+                                ✅ Video Demonstrations<br>
+                                ✅ Customer Reviews & Testimonials<br>
+
+                                <b>Technologies Used</b> : <br>
+                                <b>Frontend</b> : HTML5, CSS3, JavaScript <br>
+                                <b>Chatbot Integration</b> : by wati <br>
+                                <b>Content Management System (CMS)</b> : Shopify<br>
+                                <b> Additional Integrations:</b> : Payment Gateways <br>
+                                <b>Domain </b> : sepal.in
+
+
                             </p>
-                            <a href="https://hiddenvibes.in" target="_blank"
+                            <a href="https://www.sepal.in/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
