--- a/index.html
+++ b/index.html
@@ -882,13 +882,20 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Dream Institute Website</h3>
                             <p class="portfolio__description">
-                                I have created a Dream Institute website. a testament to my web development expertise.
-                                This captivating platform offers a seamless user experience, highlighting the full
-                                potential of my skills. With essential pages like Home, About, Courses, and Contact,
-                                visitors can explore the institute's mission, values, and diverse course offerings.
-                                Intuitive navigation enables effortless engagement, allowing users to delve into the
-                                institute's educational vision and connect with ease.
-                                prowess.
+                                <b>Description</b> :The Dream Institute website is an educational platform designed to
+                                showcase information about courses, faculty, and facilities, providing a user-friendly
+                                interface for prospective students.<br>
+
+                                <b>Features</b>: <br>
+                                ✅ Detailed course descriptions and offerings.<br>
+                                ✅ Faculty profiles and information.<br>
+                                ✅ Gallery showcasing campus facilities<br>
+                                ✅ Contact form for inquiries.<br>
+                                ✅ Responsive design for seamless viewing on different devices.<br>
+
+                                <b>Technologies Used</b> : <br>
+                                <b>Programming Languages</b> : HTML, CSS, JavaScript <br>
+                                <!-- <b>Chatbot Integration</b> : JavaScript <br> -->
                             </p>
                             <a href="https://harshitbhalani.github.io/Dream_Institute_Website.github.io/"
                                 target="_blank" class="button button--flex button--small portfolio__button">
@@ -898,7 +905,7 @@
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <!-- <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/FRIENDS_PORTFOLIO.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
@@ -916,9 +923,9 @@
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!--==================== PORTFOLIO 4 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <!-- <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/HARSHIT_PORTFOLIO.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
@@ -937,7 +944,8 @@
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
+
                     <!--==================== PORTFOLIO 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/HARSHIT_PROFILE.png" alt="" class="portfolio__img">
@@ -945,21 +953,29 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">My Digital Profile</h3>
                             <p class="portfolio__description">
-                                I have created a digital portfolio card using HTML, CSS, and JavaScript that showcases
-                                my personal details, projects, personal portfolio details, and GitHub link and linkedin
-                                link. The portfolio is designed to be visually appealing and mobile-friendly, with a
-                                user-friendly interface and clear information architecture. It is optimized for search
-                                engines and is a crucial element to a successful career as a web developer.
+                                <b>Description</b> :professional profiles of Harshit Bhalani <br>
+
+                                <b>Features</b>: <br>
+                                ✅ Portfolio Showcase <br>
+                                ✅ Interactive UI/UX Design<br>
+                                ✅ Project Demos<br>
+                                ✅ Responsive Layout<br>
+                                ✅ Contact Integration<br>
+
+                                <b>Technologies Used</b> : <br>
+                                <b>Programming Languages</b> : HTML, CSS, JavaScript <br>
+
                             </p>
                             <a href="https://harshitbhalani.github.io/Harshit_Bhalani_Profile.github.io/"
                                 target="_blank" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
+
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 6 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <!-- <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/GRADIENT COLOR CODE GENERATOR.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
@@ -979,7 +995,7 @@
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!--==================== PORTFOLIO 7 ====================-->
                     <!-- <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/colorhub.png" alt="" class="portfolio__img"
@@ -1030,11 +1046,17 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">TO-Do List</h3>
                             <p class="portfolio__description">
-                                I have created a project called "Todo List" using HTML, CSS, and JavaScript. This
-                                project is designed to help users manage their daily tasks by creating, updating,
-                                reading, and deleting tasks.The ability to add new tasks to the list,update existing
-                                tasks, read tasks from the list,delete tasks from the list,mark tasks as complete The
-                                project is a great example of my proficiency in HTML5, CSS3, and JavaScrip.
+                                <b>Description</b> : This is a simple and user-friendly tool that allows users to efficiently manage their tasks by adding, marking as completed, and deleting them.<br>    
+
+                                <b>Features</b>: <br>
+                                ✅ Add Tasks<br>
+                                ✅ Mark Tasks as Completed<br>
+                                ✅ Delete Tasks<br>
+                                ✅ Persistent Storage<br>
+                                ✅ Clear All Tasks<br>
+
+                                <b>Technologies Used</b> : <br>
+                                <b>Programming Languages</b> : HTML, CSS, JavaScript <br>
                             </p>
                             <a href="https://harshitbhalani.github.io/TODO-List.github.io/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
