--- a/index.html
+++ b/index.html
@@ -804,7 +804,39 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+
                     <!--==================== PORTFOLIO 1 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/BAKING_AI.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Baking Ai</h3>
+                            <p class="portfolio__description">
+                                <b>Description</b> : Baking AI is a hackathon project designed to simplify baking
+                                through AI-driven precision. It features a smart recipe converter that standardizes
+                                measurements to ensure consistent results for users. <br>
+
+                                <b>Features</b>: <br>
+                                ✅ Precise measurement conversion to grams. <br>
+                                ✅ Search button - Easily find any recipe. <br>
+                                ✅ Pagination: Enables fast data loading in page-by-page segments.<br>
+                                ✅ Responsive website<br>
+
+                                <b>Technologies Used</b> : <br>
+                                <b>Frontend</b> : HTML, Bootstrap, JavaScript, React.js. <br>
+                                <b>Backend</b> : Python, Flask API, CSV file. <br>
+                                <b>Hosting</b> : Vercel for frontend, Render for backend.<br>
+                                <b>Version Control</b> : GitHub.
+                            </p>
+                            <a href="https://bakingai.vercel.app/" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/BH_DIGITAL_SOLUTIONS.png" alt="" class="portfolio__img">
 
@@ -835,8 +867,7 @@
                     </div>
 
 
-
-                    <!--==================== PORTFOLIO 2 ====================-->
+                    <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/HIDDENVIBES.png" alt="" class="portfolio__img">
 
@@ -875,7 +906,7 @@
 
 
 
-                    <!--==================== PORTFOLIO 2 ====================-->
+                    <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/DREAM_INSTITUTE.png" alt="" class="portfolio__img">
 
@@ -1039,14 +1070,15 @@
                             </a>
                         </div>
                     </div> -->
-                    <!--==================== PORTFOLIO 9 ====================-->
+                    <!--==================== PORTFOLIO 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/TODO-LIST.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">TO-Do List</h3>
+                            <h3 class="portfolio__title">TO-DO List</h3>
                             <p class="portfolio__description">
-                                <b>Description</b> : This is a simple and user-friendly tool that allows users to efficiently manage their tasks by adding, marking as completed, and deleting them.<br>    
+                                <b>Description</b> : This is a simple and user-friendly tool that allows users to
+                                efficiently manage their tasks by adding, marking as completed, and deleting them.<br>
 
                                 <b>Features</b>: <br>
                                 ✅ Add Tasks<br>
