--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                                 <b>Features</b>: <br>
                                 ✅ Precise measurement conversion to grams. <br>
                                 ✅ Search button - Easily find any recipe. <br>
-                                ✅ Pagination: Enables fast data loading in page-by-page segments.<br>
+                                ✅ Pagination - Enables fast data loading in page-by-page segments.<br>
                                 ✅ Responsive website<br>
 
                                 <b>Technologies Used</b> : <br>
